# RustFetcher-Juno

src/icp_rust_boilerplate_backend/: Cargo.toml  satellite.did  satellite_extension.did
src/icp_rust_boilerplate_backend/src/: lib.rs
