[package]
name = "icp_rust_boilerplate_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.2"
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.1"
serde = "1.0.190"
serde_cbor = "0.11.2"
junobuild-satellite = "0.0.15-patch.1"
junobuild-macros = "0.0.1"
junobuild-utils = "0.0.1"